<resources>
    <string name="app_name">My Application</string>
    <string name="آزمایشگاه">آزمایشگاه</string>
    <string name="LOGIN">LOGIN</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="VerifyCode">Verify Code</string>
    <string name="TestBlood">Test Blood</string>
    <string name="DonateBlood">Donate Blood</string>
    <string name="TutorialVideo">Tutorial Video</string>
    <string name="MyProfile">My Profile</string>
    <string name="Choose">Choose your laboratory</string>
    <string name="AGHa">AGHA KHAN LABORATORY</string>
    <string name="DOW">DOW LABORATORY</string>
    <string name="S">Shaukat Khanum LABORATORY</string>
    <string name="FAYAZ">FAYAZ LABOARTORY</string>
    <string name="QUETTA">QUETTA LABORATORY</string>
    <string name="Agha">Agha Khan Lab Test List</string>
    <string name="RBCRedBloodCell1500rs">RBC Red Blood Cell  1500rs</string>
    <string name="HIV">HIV Antibody Test  5500r/s</string>
    <string name="TSHThyroidStimulatinghormone3000rs">TSH Thyroid Stimulating hormone  3000rs</string>
    <string name="Urina">Urinalysis  4000r/s</string>
    <string name="Pregnancy">Pregnancy 6000r/s</string>
    <string name="LFTLiver">LFT Liver Function Panel 15000r/s</string>
    <string name="Hemoglobin">Hemoglobin Test 3500r/s</string>
    <string name="DAWLabTestList">DAW Lab Test List</string>
    <string name="DESOXYCORYISOSERUM">DESOXYCORYISOL,SERUM 15000r/s</string>
    <string name="UASSAY">U ASSAY(5BFLUOROURACIL),BLOOD 11000r/s</string>
    <string name="THIOGUANIN">THIOGUANIN NUCLEOTIDES BLOOD 11500r/s</string>
    <string name="ABSOLUTEEOSINOPHILSBLOOD">ABSOLUTE EOSINOPHILS BLOOD 1500r/s</string>
    <string name="ACETONE">ACETONE(KETONE)URINE 3000r/s</string>
    <string name="ACTHPLASMA">ACTH,PLASMA 6000r/s</string>
    <string name="ALLERGYCHICKENSERUM"> ALLERGY CHICKEN 8000r/s</string>
    <string name="Shukat">Shukat Khanam Lab TEST list</string>
    <string name="GeneralHealthScreen">General Health Screen 11000r/s</string>
    <string name="BoneHealthScreen">Bone Health Screen 5600r/s</string>
    <string name="MetabolicScreen">Metabolic Screen 7800r/s</string>
    <string name="ChronicHepatitisScreen">Chronic Hepatitis Screen 8500r/s</string>
    <string name="InitialAntentalScreen">Initial Antental Screen 7500r/s</string>
    <string name="ChronicKidneyDiseaseScreen">Chronic  Kidney  Disease Screen 8000r/s</string>
    <string name="NephriticScrren">Nephritic Scrren 5000r/s</string>
    <string name="FAYAZLabTestList">FAYAZ Lab Test List</string>
    <string name="ANTICARDIOLIPINBLOOD">ANTI CARDIOLIPIN BLOOD 4500r/s</string>
    <string name="ANTI">ANTI dsDNA(lgG) 3500r/s</string>
    <string name="OHPROGESTERON">17-OHPROGESTERON 6000r/s</string>
    <string name="ANTICARDIOLIPIN">ANTI-CARDIOLIPIN 5000r/s</string>
    <string name="ALCOHOL">ALCOHOL 4000r/s</string>
    <string name="ABOBLOODGroup">ABO BLOOD Group 2500r/s</string>
    <string name="A1ANTITRYSPSIN">A1-ANTI TRYSPSIN 4600r/s</string>
    <string name="QuettaLabTestList">Quetta Lab Test List</string>
    <string name="ANTICARDIOLIPIN1">ANTI-CARDIOLIPIN 3200r/s</string>
    <string name="ANTICARDIOLIPINBLOOD1">ANTI CARDIOLIPIN BLOOD 1500 r/s</string>
    <string name="OHPROGESTERON1">17-OHPROGESTERON 7500 r/s</string>
    <string name="ABOBLOODGroup1">ABO BLOOD Group  500r/s</string>
    <string name="ANTI1">ANTI dsDNA(lgG) 11oor/s</string>
    <string name="AANTITRYSPSIN">A1-ANTI TRYSPSIN 2500r/s</string>
    <string name="ALCOHOL1">ALCOHOL 500r/s</string>
    <string name="RegistrationForm">Registration form</string>
    <string name="Name">Name</string>
    <string name="Fname">F-Nsme</string>
    <string name="Age">Age</string>
    <string name="Male">Male</string>
    <string name="Fmale">F-Male</string>
    <string name="Cnic">CNIC NO</string>
    <string name="DDMMYY">DDMMYY</string>
    <string name="Price">Price</string>
    <string name="Location">Location</string>
    <string name="phlebotomist">phlebotomist is on way</string>
    <string name="HisName">His Name</string>
    <string name="BikeNumber">Bike Number</string>
    <string name="Test">Test Name with price and time</string>
    <string name="Check">Check Nearest Blood Bank</string>
    <string name="NotifyDonor">Notify Donor</string>
    <string name="BLOOD">BLOOD BANK LOCATION</string>
    <string name="BloodGroup">Blood-Group</string>
    <string name="myproile">MY-PROFILE</string>
    <string name="testreports">TeST-REPORTS</string>
    <string name="testlist">TEST-LIST</string>
    <string name="BloodREcive">Blood-Receive</string>
    <string name="AllTesrreports">ALL TEST REPORTS</string>
    <string name="test1pdf">TEST 1 PDF</string>
    <string name="test2pdf">TEST 2 PDF</string>
    <string name="test3pdf">TEST 3 PDF</string>
    <string name="test4pdf">TEST 4 PDF</string>
    <string name="alltestlistwithdate">ALL TEST LIST WITH DATE AND DAY</string>
    <string name="sugartestwithdate">SUGAR TEST -800 WEDNESDAY 4TH OCT-2019</string>
    <string name="t4t3t5testwithdate">T3 T4 T5 THYROID 1800 FRIDAY 9TH-NOVEMBER-2019</string>
    <string name="DESOXYCORYISOL2"> DESOXYCORYISOL,SERUM 15200 MONDAY 13-SEPTEMBER 2019</string>
    <string name="METABOLIC">METABOLIC SCREEN 8000 SATURDAY 18-AUGUST 2019</string>
    <string name="blloddonatewithdate">BLOOD DONATE DATE AND DAY</string>
    <string name="rbc">Regional blood center,11-October-2019,A+</string>
    <string name="bfll">BLOOD FOR LIFE,13 September-2019,AB+ </string>
    <string name="nbb">NATIONAL BLOOD BANK,12 JULY-2019,B+</string>
    <string name="SUNDAS">SUNDAS Foundation ,11 March-2019 ,O+</string>
    <string name="brwithdate">BLOOD RECIEVE DATE AND DAY</string>
    <string name="next">Next</string>
    <string name="callnow">Call Now</string>
    <string name="emn">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="c">Continue</string>
    <string name="ameerro">noerror</string>
    <string name="invalid">invalid_cnic</string>
    <string name="invalid_cnic">invalid_cnic</string>
    <string name="namerror">namerror</string>
    <string name="f_namerror">f_nameerror</string>
    <string name="DOB">DOB</string>
    <string name="bg">blood group</string>
    <string name="age">age</string>
    <string name="title_activity_locationmap">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>

</resources>
