<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shukatkhanamlab">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="348dp"
        android:layout_height="438dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.234">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TEXT_STATUS_ID"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/Shukat"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/red"
                android:text="@string/GeneralHealthScreen"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@color/red"
                android:text="@string/BoneHealthScreen"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"

                />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/red"
                android:text="@string/MetabolicScreen"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/red"
                android:text="@string/ChronicHepatitisScreen"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/red"
                android:text="@string/InitialAntentalScreen"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:background="@color/red"
                android:text="@string/ChronicKidneyDiseaseScreen"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/red"
                android:text="@string/NephriticScrren"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="129dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="147dp"
        android:layout_height="41dp"
        android:gravity="center_horizontal"
        android:text="@string/آزمایشگاه"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="167dp"
        android:layout_height="37dp"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>