<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fayazlab">


    <ScrollView
        android:id="@+id/sv"
        android:layout_width="321dp"
        android:layout_height="428dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.234">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TEXT_STATUS_ID"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/FAYAZLabTestList"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/black_box"
                android:text="@string/ABOBLOODGroup"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/black_box"
                android:text="@string/ANTI"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"

                />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@color/black_box"
                android:text="@string/ACTHPLASMA"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/black_box"
                android:text="@string/ACETONE"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/black_box"
                android:text="@string/ALCOHOL"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/black_box"
                android:text="@string/ABOBLOODGroup"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@color/black_box"
                android:text="@string/A1ANTITRYSPSIN"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="118dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal"
        android:text="@string/آزمایشگاه"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="30sp"

        app:layout_constraintBottom_toTopOf="@+id/sv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="35dp"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.972" />
</androidx.constraintlayout.widget.ConstraintLayout>