<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".daw_lab">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="352dp"
        android:layout_height="474dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TEXT_STATUS_ID"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/DAWLabTestList"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/black_box"
                android:text="@string/DESOXYCORYISOSERUM"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"

                />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:background="@color/black_box"
                android:text="@string/UASSAY"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:background="@color/black_box"
                android:text="@string/THIOGUANIN"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/black_box"
                android:text="@string/A1ANTITRYSPSIN"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"

                />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:background="@color/black_box"
                android:text="@string/ACETONE"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black_box"
                android:text="@string/ACTHPLASMA"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/black_box"
                android:text="@string/ACTHPLASMA"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="137dp"
        android:layout_height="107dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:text="@string/آزمایشگاه"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="35dp"
        android:background="@color/red"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

</androidx.constraintlayout.widget.ConstraintLayout>