<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".person_onway">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="387dp"
        android:layout_height="109dp"
        android:layout_marginTop="32dp"
        android:text="@string/phlebotomist"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="387dp"
        android:layout_height="314dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/way" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="158dp"
        android:layout_height="46dp"
        android:text="@string/HisName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:text="@string/BikeNumber"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="373dp"
        android:layout_height="71dp"
        android:text="@string/Test"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="270dp"
        android:layout_height="39dp"
        android:text="@string/sugartestwithdate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="@+id/textView31"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toTopOf="@+id/textView31"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>